# neuronveil-mnist-train

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  run.sh
artifacts/: mnist.amrm  mnist.json
neuronveil_mnist/: __about__.py  com.py  dense.py  evaluate.py  layer.py  model.py  neuronveil_mnist.py  relu.py  softmax.py  train.py  train_manual.py  train_pso.py  utils.py
tests/: __init__.py
