[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuronveil-mnist"
description = 'Train a simple neural network that detects handwritten digits and export it to NeuronVeil'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Amit Goren", email = "animalfarm@mailfence.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jax[cpu] ~= 0.4.0",
  "pyswarms ~= 1.3.0",
  "scikit-learn ~= 1.4.0",
  "numpy ~= 1.26.0",
  "orjson ~= 3.10.3"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/AmitDIRTYC0W/NeuronVeil#readme"
Issues = "https://github.com/AmitDIRTYC0W/NeuronVeil/issues"
Source = "https://github.com/AmitDIRTYC0W/NeuronVeil/scripts/NeuronVeil-mnist"

[project.scripts]
neuronveil-mnist = "neuronveil_mnist.neuronveil_mnist:main"

[tool.hatch.version]
path = "neuronveil_mnist/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=neuronveil_mnist --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "neuronveil_mnist/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
